Adding prefill variable
New variable to show whether or not the questions in a particular section can be prefilled with answers
from an earlier declaration

--- a/frameworks/g-cloud-9/manifests/declaration.yml
+++ b/frameworks/g-cloud-9/manifests/declaration.yml
@@ -1,6 +1,7 @@
 -
   name: Providing suitable services
   editable: True
+  prefill: False
   description: >
     You must make this declaration to apply to G-Cloud&nbsp;9. You can come back and change your answers at any time before
     5pm BST, 11 April 2017. [might want to remove]
@@ -20,6 +21,7 @@
 -
   name: What it means to be on G-Cloud&nbsp;9
   editable: True
+  prefill: False
   description: >
     If you make an application to G-Cloud&nbsp;9, you’re agreeing to the terms and conditions in the legal documentation.
 
@@ -36,6 +38,7 @@
 -
   name: Grounds for mandatory exclusion
   editable: True
+  prefill: True
   description: >
     You must be able to truthfully answer ‘no’ to every question under ‘Grounds for mandatory exclusion’ for your application to be
     considered eligible. If you can’t answer ‘no’ to every question in this
@@ -56,6 +59,7 @@
 -
   name: Grounds for discretionary exclusion
   editable: True
+  prefill: True
   description: >
     You must be able to truthfully answer ‘no’ to every question under ‘Grounds for discretionary exclusion’
     for your bid to be considered eligible. If you can’t answer ‘no’, your bid may not be accepted. If
@@ -96,6 +100,7 @@
 
   name: Working with government
   editable: True
+  prefill: True
   description: >
     You must be able to truthfully answer ‘yes’ to every question under ‘Working with government’ for your bid to be
     considered eligible.
@@ -110,6 +115,7 @@
 -
   name: How you apply
   editable: True
+  prefill: False
   description: >
     You must be able to truthfully answer ‘yes’ to every question on this page for your application to be considered eligible.
 
@@ -122,6 +128,7 @@
 -
   name: Application accuracy
   editable: True
+  prefill: False
   description: >
     You must confirm the accuracy of the information in this declaration and in your service descriptions. We might ask for proof after you’ve submitted your application.
 
@@ -134,6 +141,7 @@
 -
   name: About your organisation
   editable: True
+  prefill: True
   description: >
     The Crown Commercial Service will use the information you provide on this page to process your application and manage your participation in G-Cloud&nbsp;9. 
 
@@ -147,6 +155,7 @@
 -
   name: Organisation registration
   editable: True
+  prefill: True
   description: >
     The Crown Commercial Service will use this information to process your application and manage your participation in G-Cloud&nbsp;9.
   questions:
@@ -164,6 +173,7 @@
 
   name: How you’ll deliver your services
   editable: True
+  prefill: True   
   description: >
     The Crown Commercial Service will use this information to manage your participation in G-Cloud&nbsp;9. 
   questions:
@@ -172,6 +182,7 @@
 
   name: Organisation’s size
   editable: True
+  prefill: True
   description: >
     The Crown Commercial Service will use the information you provide to report overall statistics about the successful suppliers on G-Cloud&nbsp;9.
   questions:
@@ -180,6 +191,7 @@
 
   name: Trading status
   editable: True
+  prefill: True
   description: >
     The Crown Commercial Service will use the information to understand the different types of suppliers providing G-Cloud&nbsp;9 services.
   questions:
@@ -189,6 +201,7 @@
 
   name: Contact details
   editable: True
+  prefill: True  
   description: >
      The Crown Commercial Service will use the primary contact information to contact your organisation if it has any questions about your application.  
   questions:
