--- a/frameworks/g-cloud-9/questions/declaration/GAAR.yml
+++ b/frameworks/g-cloud-9/questions/declaration/GAAR.yml
@@ -1,3 +1,4 @@
+name: Why a tax return was incorrect
 question: >
   Please confirm whether any of your organisation’s tax returns, submitted on or after 1 October 2012, have been found to be incorrect on or after 1 April 2013 because:
 
