--- a/frameworks/g-cloud-9/questions/declaration/accuratelyDescribed.yml
+++ b/frameworks/g-cloud-9/questions/declaration/accuratelyDescribed.yml
@@ -1,2 +1,3 @@
-question: Do you confirm that all the service descriptions you’re submitting for G-Cloud&nbsp;9 on the Digital Marketplace will be accurate and true representations?
+name: Service description accuracy
+question: Will all the service descriptions you’re submitting for G-Cloud&nbsp;9 on the Digital Marketplace be accurate and true representations?
 type: boolean
