--- a/frameworks/g-cloud-9/questions/declaration/distortedCompetition.yml
+++ b/frameworks/g-cloud-9/questions/declaration/distortedCompetition.yml
@@ -1,3 +1,4 @@
+name: Unfair prior involvement in the procurement process
 question: >
   Please confirm whether, within the past 3 years, your organisation or any of your partner organisations has:
 
