--- a/frameworks/g-cloud-9/questions/declaration/employersInsurance.yml
+++ b/frameworks/g-cloud-9/questions/declaration/employersInsurance.yml
@@ -1,3 +1,4 @@
+name: Employer's liability insurance
 question: >
   Does your organisation have, or
   will it have prior to framework award, employer’s liability insurance of at least
