--- a/frameworks/g-cloud-9/questions/declaration/environmentalSocialLabourLaw.yml
+++ b/frameworks/g-cloud-9/questions/declaration/environmentalSocialLabourLaw.yml
@@ -1,3 +1,4 @@
+name: Violations of environmental, social or labour law
 question: >
   Please confirm whether, within the past 3 years, your organisation or any of your partner organisations has:
 
