--- a/frameworks/g-cloud-9/questions/declaration/offerServicesYourselves.yml
+++ b/frameworks/g-cloud-9/questions/declaration/offerServicesYourselves.yml
@@ -1,2 +1,3 @@
+name: What your team will deliver
 question: Please confirm that you or your team will deliver the services you’re offering on the framework yourselves, and that your organisation does not solely source staff for others.
 type: boolean
