--- a/frameworks/g-cloud-9/questions/declaration/organisedCrime.yml
+++ b/frameworks/g-cloud-9/questions/declaration/organisedCrime.yml
@@ -1,3 +1,4 @@
+name: Organised crime convictions
 question: >
   Please confirm whether, within the past 5 years, anyone who represents, supervises or has control in your organisation or a partner or parent organisation has been convicted of:
 
