--- a/frameworks/g-cloud-9/questions/declaration/termsAndConditions.yml
+++ b/frameworks/g-cloud-9/questions/declaration/termsAndConditions.yml
@@ -1,3 +1,4 @@
+name: Terms and conditions
 question: >
   Do you accept the terms and conditions in the [framework agreement and call-off contract documents](/suppliers/frameworks/g-cloud-9)?
 type: boolean
