--- a/frameworks/g-cloud-9/questions/declaration/termsOfParticipation.yml
+++ b/frameworks/g-cloud-9/questions/declaration/termsOfParticipation.yml
@@ -1,3 +1,4 @@
+name: Invitation to apply
 question: >
   Do you agree to comply with the terms of the [G-Cloud&nbsp;9 ‘invitation to apply’](/suppliers/frameworks/g-cloud-9)?
 type: boolean
