--- a/frameworks/g-cloud-9/questions/declaration/tradingStatusOther.yml
+++ b/frameworks/g-cloud-9/questions/declaration/tradingStatusOther.yml
@@ -1,3 +1,4 @@
+name: Trading status description
 question: Describe your trading status if you answered ‘other’ to [[tradingStatus]].
 type: text
 validations:
