--- a/frameworks/g-cloud-9/questions/declaration/transparentContracting.yml
+++ b/frameworks/g-cloud-9/questions/declaration/transparentContracting.yml
@@ -1,2 +1,3 @@
+name: Financial performance transparency
 question: Will you be transparent about your financial performance according to your contractual obligations?
 type: boolean
