--- a/frameworks/g-cloud-9/questions/declaration/unspentTaxConvictions.yml
+++ b/frameworks/g-cloud-9/questions/declaration/unspentTaxConvictions.yml
@@ -1,3 +1,4 @@
+name: If a tax return was incorrect
 question: >
   Please confirm whether any of your organisation’s tax returns submitted on or after 1 October 2012 have:
 
