--- a/frameworks/g-cloud-9/questions/declaration/distortingCompetition.yml
+++ b/frameworks/g-cloud-9/questions/declaration/distortingCompetition.yml
@@ -1,3 +1,4 @@
+name: Distorting competition with other economic operators
 question: >
   Please confirm whether, within the past 3 years, your organisation or any of your partner organisations has:
 
