--- a/frameworks/g-cloud-9/questions/declaration/environmentallyFriendly.yml
+++ b/frameworks/g-cloud-9/questions/declaration/environmentallyFriendly.yml
@@ -1,3 +1,4 @@
+name: Environmentally-friendly working practices
 question: Do you work in an environmentally-friendly way?
 type: boolean
 hint: Answer ‘yes’ if your organisation engages in working practices like recycling or lowering your carbon footprint.
