--- a/frameworks/g-cloud-9/questions/declaration/equalityAndDiversity.yml
+++ b/frameworks/g-cloud-9/questions/declaration/equalityAndDiversity.yml
@@ -1,3 +1,4 @@
+name: Equality and diversity obligations
 question: >
   Please confirm that your organisation complies with legal equality and diversity obligations relating to:
 
