--- a/frameworks/g-cloud-9/questions/declaration/establishedInTheUK.yml
+++ b/frameworks/g-cloud-9/questions/declaration/establishedInTheUK.yml
@@ -1,3 +1,4 @@
+name: Where your business was established
 question: Was your business established in the UK?
 type: boolean
 hint: If you answer ‘yes’ to this question, please move on to question [[organisationSize]].
