--- a/frameworks/g-cloud-9/questions/declaration/fraudAndTheft.yml
+++ b/frameworks/g-cloud-9/questions/declaration/fraudAndTheft.yml
@@ -1,3 +1,4 @@
+name: Fraud convictions
 question: >
   Please confirm whether, within the past 5 years, anyone who represents, supervises or has control in your organisation or a partner or parent organisation has been convicted of any offence that relates to fraud affecting the European Communities’ financial interests as defined by article 1 of the Convention on the Protection of the Financial Interests of the European Communities, including:
 
