--- a/frameworks/g-cloud-9/questions/declaration/fullAccountability.yml
+++ b/frameworks/g-cloud-9/questions/declaration/fullAccountability.yml
@@ -1,3 +1,4 @@
+name: Contractual responsibility and accountability
 question: >
   Please confirm that your organisation will take direct contractual responsibility and full accountability for 
   delivering the services you’re offering on the framework.
