--- a/frameworks/g-cloud-9/questions/declaration/influencedContractingAuthority.yml
+++ b/frameworks/g-cloud-9/questions/declaration/influencedContractingAuthority.yml
@@ -1,3 +1,4 @@
+name: Influencing the contracting authority
 question: >
   Please confirm whether, within the past 3 years, your organisation or any of your partner organisations has:
 
