--- a/frameworks/g-cloud-9/questions/declaration/mitigatingFactors2.yml
+++ b/frameworks/g-cloud-9/questions/declaration/mitigatingFactors2.yml
@@ -1,3 +1,4 @@
+name: Mitigating factors for discretionary exclusion
 question: >
   If you responded ‘yes’ to either question [[unspentTaxConvictions]] or question [[GAAR]], please provide details of 
   any mitigating factors that you think should be taken into consideration.
