--- a/frameworks/g-cloud-9/questions/declaration/proofOfClaims.yml
+++ b/frameworks/g-cloud-9/questions/declaration/proofOfClaims.yml
@@ -1,2 +1,3 @@
+name: Proof of claims about services
 question: Are you prepared to provide proof of any claims made about the services you’re submitting to G-Cloud&nbsp;9?
 type: boolean
