--- a/frameworks/g-cloud-9/questions/declaration/publishContracts.yml
+++ b/frameworks/g-cloud-9/questions/declaration/publishContracts.yml
@@ -1,3 +1,4 @@
+name: Publishing contracts
 question: >
   Are you prepared to [publish contracts according to government policy](https://www.gov.uk/government/publications/procurement-policy-note-1315-increasing-the-transparency-of-contract-information)?
 type: boolean
