--- a/frameworks/g-cloud-9/questions/declaration/registeredAddress.yml
+++ b/frameworks/g-cloud-9/questions/declaration/registeredAddress.yml
@@ -1,5 +1,6 @@
-name: Registered address
+name: Registered office address
 question: What is your organisation’s registered office address?
+hint: If you’re successful, this will be included in your framework agreement.
 optional: false
 type: multiquestion
 questions:
