--- a/frameworks/g-cloud-9/questions/declaration/requisiteAuthority.yml
+++ b/frameworks/g-cloud-9/questions/declaration/requisiteAuthority.yml
@@ -1,3 +1,4 @@
+name: Authority to apply
 question: >
   Do you have the authority to apply for this framework on behalf of your organisation?
 type: boolean
