--- a/frameworks/g-cloud-9/questions/declaration/seriousMisrepresentation.yml
+++ b/frameworks/g-cloud-9/questions/declaration/seriousMisrepresentation.yml
@@ -1,3 +1,4 @@
+name: Serious misrepresentation of information
 question: >
   Please confirm whether, within the past 3 years, your organisation or any of your partner organisations has:
 
