--- a/frameworks/g-cloud-9/questions/declaration/significantOrPersistentDeficiencies.yml
+++ b/frameworks/g-cloud-9/questions/declaration/significantOrPersistentDeficiencies.yml
@@ -1,3 +1,4 @@
+name: Mismanaging a public contract
 question: >
   Please confirm whether, within the past 3 years, your organisation or any of your partner organisations has:
 
