--- a/frameworks/g-cloud-9/questions/declaration/skillsAndResources.yml
+++ b/frameworks/g-cloud-9/questions/declaration/skillsAndResources.yml
@@ -1,2 +1,3 @@
+name: Required skills and resources
 question: Does your organisation have the skills and resources to provide the services you’re submitting for G-Cloud&nbsp;9?
 type: boolean
