--- a/frameworks/g-cloud-9/questions/declaration/subcontracting.yml
+++ b/frameworks/g-cloud-9/questions/declaration/subcontracting.yml
@@ -1,5 +1,6 @@
+name: Subcontractors or consortia
 question: "Please confirm whether you will provide G-Cloud&nbsp;9 services:"
-type: radios
+type: checkboxes
 options:
   - label: yourself without the use of third parties (subcontractors)
   - label: as a prime contractor, using third parties (subcontractors) to provide some services
