--- a/frameworks/g-cloud-9/questions/declaration/taxEvasion.yml
+++ b/frameworks/g-cloud-9/questions/declaration/taxEvasion.yml
@@ -1,3 +1,4 @@
+name: In breach of tax payments
 question: Have any members of your organisation or a partner organisation been legally found to be in breach of tax payments or social security contributions?
 type: boolean
 hint: >
