--- a/frameworks/g-cloud-9/questions/declaration/understandTool.yml
+++ b/frameworks/g-cloud-9/questions/declaration/understandTool.yml
@@ -1,2 +1,3 @@
+name: Completing the declaration and adding a service
 question: Do you understand that you must complete both the supplier declaration and add at least one service before your application to G-Cloud&nbsp;9 can be considered?
 type: boolean
