set service name to be editable

--- a/frameworks/g-cloud-9/manifests/edit_submission.yml
+++ b/frameworks/g-cloud-9/manifests/edit_submission.yml
@@ -6,7 +6,7 @@
     - lotName
 -
   name: Service name
-  editable: false
+  editable: true
   edit_questions: true
   questions:
     - serviceName
