--- a/frameworks/g-cloud-9/questions/services/serviceBenefits.yml
+++ b/frameworks/g-cloud-9/questions/services/serviceBenefits.yml
@@ -1,5 +1,5 @@
-question: 'List the service benefits.'
-name: 'Service benefits'
+question: List the service benefits.
+name: Service benefits
 question_advice: >
     Include the benefits that show how your service helps users improve their working processes.
     Use active phrases, for example ‘publish content from multiple devices’ or ‘quickly manage content on the move’.
@@ -11,18 +11,18 @@ depends:
       - cloud-hosting
       - cloud-software
       - cloud-support
-list_item_name: 'service benefit'
+list_item_name: service benefit
 type: list
 validations:
   -
     name: answer_required
-    message: 'You need to answer this question.'
-  -
-    name: under_10_words
-    message: 'Each benefit must be no more than 10 words.'
+    message: You need to answer this question.
   -
     name: max_items_limit
-    message: 'You must have 10 or fewer benefits.'
+    message: You can have no more than 10 benefits.
+  -
+    name: under_10_words
+    message: Each benefit must be no more than 10 words.
   -
     name: under_character_limit
-    message: 'Each benefit must be no more than 100 characters.'
+    message: Each benefit must be no more than 100 characters.
