--- a/frameworks/g-cloud-9/questions/services/serviceFeaturesAndBenefits.yml
+++ b/frameworks/g-cloud-9/questions/services/serviceFeaturesAndBenefits.yml
@@ -1,6 +1,13 @@
-question: 'Service features and benefits'
-name: 'Service features and benefits'
+question: Service features and benefits
+name: Service features and benefits
 optional: false
+depends:
+  -
+    "on": lot
+    being:
+    - cloud-hosting
+    - cloud-software
+
 type: multiquestion
 questions:
   - serviceFeatures
