Adding prefill option

--- a/schemas/manifests.json
+++ b/schemas/manifests.json
@@ -14,6 +14,9 @@
       "editable": {
         "type": "boolean"
       },
+      "prefill": {
+        "type": "boolean"
+      },
       "edit_questions": {
         "type": "boolean"
       },
