--- a/frameworks/digital-outcomes-and-specialists-2/messages/urls.yml
+++ b/frameworks/digital-outcomes-and-specialists-2/messages/urls.yml
@@ -1,3 +1,5 @@
+call_off_contract_url: "https://www.gov.uk/government/publications/digital-outcomes-and-specialists-2-call-off-contract"
+
 framework_agreement_url: "https://www.gov.uk/government/publications/digital-outcomes-and-specialists-2-framework-agreement"
 
 framework_agreement_pdf_url: "https://www.gov.uk/government/uploads/system/uploads/attachment_data/file/583737/digital-outcomes-and-specialists-2-framework-agreement.pdf"
