updates from comments

--- a/frameworks/g-cloud-9/manifests/edit_submission.yml
+++ b/frameworks/g-cloud-9/manifests/edit_submission.yml
@@ -39,7 +39,7 @@
   editable: false
   edit_questions: true
   questions:
-    - supplierType
+    - resellerType
 
 -
   name: User support
@@ -173,7 +173,7 @@
   questions:
     - multiqUserAuthenticationHosting
     - multiqUserAuthenticationSoftware
-    - accessRestrictionsManagementAndSupport
+    - accessRestrictionManagementAndSupport
     - accessRestrictionTesting
     - multiqManagementAccess
     - devicesUsersManageTheServiceThrough
