--- a/frameworks/g-cloud-9/questions/services/boardLevelServiceSecurity.yml
+++ b/frameworks/g-cloud-9/questions/services/boardLevelServiceSecurity.yml
@@ -4,8 +4,7 @@ question: >
   security of all of your services?
 
 depends:
-  -
-    "on": lot
+  - "on": lot
     being:
       - cloud-hosting
       - cloud-software
