--- a/frameworks/g-cloud-9/questions/services/incidentManagementType.yml
+++ b/frameworks/g-cloud-9/questions/services/incidentManagementType.yml
@@ -1,22 +1,20 @@
-name: "Incident management type"
-question: "Which incident management processes does your organisation comply with?"
+name: Incident management type
+question: Which incident management processes does your organisation comply with?
 depends:
-  -
-    "on": lot
+  - "on": lot
     being:
       - cloud-hosting
       - cloud-software
 
 type: radios
 options:
-    -
-        label: "Conforms to a recognised standard, for example, CSA CCM v3.0 or ISO/IEC 27035:2011 or SSAE-16 / ISAE 3402"
-    -
-        label: "Supplier-defined controls"
-    -
-        label: "Undisclosed"
+  - label: Conforms to a recognised standard, for example, CSA CCM v3.0 or ISO/IEC 27035:2011 or SSAE-16 / ISAE 3402
+    value: recognised_standard
+  - label: Supplier-defined controls
+    value: supplier_defined
+  - label: Undisclosed
+    value: undisclosed
 
 validations:
-  -
-    name: answer_required
-    message: "You need to answer this question."
+  - name: answer_required
+    message: You need to answer this question.
