--- a/frameworks/g-cloud-9/questions/services/multiqAPI.yml
+++ b/frameworks/g-cloud-9/questions/services/multiqAPI.yml
@@ -10,9 +10,9 @@ depends:
 type: multiquestion
 questions:
   - API
-  - usingTheAPI
+  - APIUsage
   - APIAutomationTools
-  - otherAPIAutomationTools
+  - APIAutomationToolsOther
   - APIDocumentation
   - APIDocumentatonFormats
   - APISandbox
