--- a/frameworks/g-cloud-9/questions/services/multiqCommandLineInterface.yml
+++ b/frameworks/g-cloud-9/questions/services/multiqCommandLineInterface.yml
@@ -10,4 +10,4 @@ type: multiquestion
 questions:
   - commandLineInterface
   - commandLineOS
-  - usingTheCommandLineInterface
+  - commandLineUsage
