--- a/frameworks/g-cloud-9/questions/services/multiqDocumentation.yml
+++ b/frameworks/g-cloud-9/questions/services/multiqDocumentation.yml
@@ -9,6 +9,6 @@ depends:
 
 type: multiquestion
 questions:
-  - serviceDocumentation
+  - documentationService
   - documentationFormats
-  - otherDocumentationFormats
+  - documentationFormatsOther
