--- a/frameworks/g-cloud-9/questions/services/multiqFreeVersion.yml
+++ b/frameworks/g-cloud-9/questions/services/multiqFreeVersion.yml
@@ -9,6 +9,6 @@ depends:
 
 type: multiquestion
 questions:
-  - trialOption
-  - describeFreeVersion
+  - freeVersionTrialOption
+  - freeVersionDescription
   - freeVersionLink
