--- a/frameworks/g-cloud-9/questions/services/multiqMobile.yml
+++ b/frameworks/g-cloud-9/questions/services/multiqMobile.yml
@@ -8,5 +8,5 @@ depends:
 
 type: multiquestion
 questions:
-  - workingWithMobile
-  - mobileAndDesktopDifferences
+  - mobile
+  - mobileDifferences
