--- a/frameworks/g-cloud-9/questions/services/multiqPublicSectorNetworks.yml
+++ b/frameworks/g-cloud-9/questions/services/multiqPublicSectorNetworks.yml
@@ -11,4 +11,4 @@ type: multiquestion
 questions:
   - publicSectorNetworks
   - publicSectorNetworkTypes
-  - otherNetworks
+  - publicSectorNetworksOther
