--- a/frameworks/g-cloud-9/questions/services/multiqScalingSoftware.yml
+++ b/frameworks/g-cloud-9/questions/services/multiqScalingSoftware.yml
@@ -8,6 +8,6 @@ depends:
 
 type: multiquestion
 questions:
-  - scalability
-  - scalingCosts
-  - independenceOfResources
+  - scalingSoftwareScalability
+  - scalingSoftwareCost
+  - scalingSoftwareIndependence
