--- a/frameworks/g-cloud-9/questions/services/multiqServiceBacksUp.yml
+++ b/frameworks/g-cloud-9/questions/services/multiqServiceBacksUp.yml
@@ -8,7 +8,7 @@ depends:
 
 type: multiquestion
 questions:
-  - dataBackups
-  - datacentreSetup
-  - schedulingBackups
-  - backupRecovery
+  - serviceBackups
+  - serviceBackupsDatacentre
+  - serviceBackupsScheduling
+  - serviceBackupsRecovery
