--- a/frameworks/g-cloud-9/questions/services/multiqWebInterface.yml
+++ b/frameworks/g-cloud-9/questions/services/multiqWebInterface.yml
@@ -9,7 +9,7 @@ depends:
 type: multiquestion
 questions:
   - webInterface
-  - usingTheWebInterface
+  - webInterfaceUsage
   - webInterfaceAccessibility
   - webInterfaceAccessibilityDescription
   - webInterfaceTesting
