--- a/frameworks/g-cloud-9/questions/services/freeVersionLink.yml
+++ b/frameworks/g-cloud-9/questions/services/freeVersionLink.yml
@@ -1,6 +1,7 @@
 name: Free version link
 question: Provide a link to the free version of your service.
 
+optional: true
 depends:
   - "on": lot
     being:
@@ -10,9 +11,5 @@ depends:
 type: text
 
 validations:
-  - name: answer_required
-    message: You need to answer this question.
-  - name: under_10_words
-    message: Your description must be no more than 10 words.
   - name: under_character_limit
-    message: Your description must be no more than 100 characters.
+    message: Your link must be no more than 1000 characters.
