--- a/frameworks/g-cloud-9/questions/services/multiqAccessSuppliersAudit.yml
+++ b/frameworks/g-cloud-9/questions/services/multiqAccessSuppliersAudit.yml
@@ -9,5 +9,5 @@ depends:
 
 type: multiquestion
 questions:
-  - accessToAuditInformationAboutSuppliersUsersActions
-  - howLongSuppliersAuditDataStored
+  - auditSuppliersActions
+  - auditSuppliersActionsStorage
