--- a/frameworks/g-cloud-9/questions/services/multiqScalingHosting.yml
+++ b/frameworks/g-cloud-9/questions/services/multiqScalingHosting.yml
@@ -8,7 +8,7 @@ depends:
 
 type: multiquestion
 questions:
-  - serviceScales
-  - scalingType
-  - scalingNotifications
-  - scalingReporting
+  - scalingHosting
+  - scalingHostingType
+  - scalingHostingNotifications
+  - scalingHostingReporting
