--- a/frameworks/g-cloud-9/questions/services/serviceDescription.yml
+++ b/frameworks/g-cloud-9/questions/services/serviceDescription.yml
@@ -12,12 +12,9 @@ type: textbox_large
 max_length_in_words: 50
 
 validations:
-  -
-    name: answer_required
+  - name: answer_required
     message: You need to answer this question.
-  -
-    name: under_50_words
+  - name: under_50_words
     message: Your description must be no more than 50 words.
-  -
-    name: under_character_limit
+  - name: under_character_limit
     message: Your description must be no more than 500 characters.
